# unosolana

./: .env  config-overrides.js  craco.config.js  debug-solana.js  deploy.sh  package-lock.json  package.json
program/: Cargo.toml
program/src/: lib.rs  uno_program.rs
public/: index.html
server/: .env  index.js  package-lock.json  package.json
server/game/: UnoGame.js
server/routes/: index.js
src/: App.css  App.js  firebase.js
src/components/: CreateRoom.js  GameRoom.js  RoomsList.js  WalletConnection.js
src/utils/: SolanaTransactions.js  UnoGame.js
