[package]
name = "uno-solana"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.14.6"
borsh = "0.9.3"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.14.6"
solana-sdk = "1.14.6"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

# Usuń całą sekcję [profile.release] - pozwól Solana CLI zarządzać optymalizacjami